# rust-extensions

./: .gitignore  .gitmodules  Cargo.toml  MAINTAINERS  README.md  _typos.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: ci-windows.yml  ci.yml  cover.yml  labeler.yml  publish.yml  stale.yml
crates/client/: Cargo.toml  README.md  build.rs  rsync.txt
crates/client-protos/: Cargo.toml  build.rs
crates/client-protos/examples/: version.rs
crates/client-protos/src/: lib.rs
crates/client/examples/: container.rs  container_events.rs  container_pull.rs  container_spec.json  version.rs
crates/client/src/: lib.rs
crates/logging/: Cargo.toml  README.md
crates/logging/examples/: journal.rs
crates/logging/src/: lib.rs
crates/protos/: Cargo.toml  README.md  build.rs
crates/protos/src/: .gitignore  lib.rs
crates/runc/: Cargo.toml  README.md
crates/runc-rust/: Cargo.toml  README.md
crates/runc-rust/src/: container.rs  error.rs  events.rs  io.rs  lib.rs  monitor.rs  options.rs  runc.rs  specs.rs  utils.rs
crates/runc-shim/: Cargo.toml  README.md  build.rs
crates/runc-shim/src/: cgroup.rs  cgroup_memory.rs  common.rs  console.rs  container.rs  io.rs  main.rs  processes.rs  runc.rs  service.rs  task.rs
crates/runc-shim/src/asynchronous/: container.rs  mod.rs  processes.rs  runc.rs
crates/runc-shim/src/synchronous/: cgroup.rs  console.rs  container.rs  io.rs  mod.rs  runc.rs  service.rs  task.rs
crates/runc/src/: console.rs  container.rs  error.rs  events.rs  io.rs  lib.rs  monitor.rs  options.rs  runc.rs  utils.rs
crates/runc/src/asynchronous/: io.rs  mod.rs  pipe.rs  runc.rs
crates/runc/src/synchronous/: io.rs  mod.rs  pipe.rs  runc.rs
crates/shim/: Cargo.toml  README.md
crates/shim-client/: Cargo.toml  README.md  build.rs
crates/shim-client/examples/: connect.rs  ttrpc-server.rs
crates/shim-client/src/: lib.rs
crates/shim-client/src/events/: container.rs  image.rs  mod.rs  mount.rs  task.rs
crates/shim-client/src/shim/: events_ttrpc.rs  mod.rs  shim_ttrpc.rs
crates/shim-client/tests/: ttrpc.rs
crates/shim-protos/: Cargo.toml  README.md  build.rs  rsync.txt
crates/shim-protos/examples/: connect-async.rs  connect.rs  ttrpc-client-async.rs  ttrpc-client.rs  ttrpc-server-async.rs  ttrpc-server.rs
crates/shim-protos/src/: cgroups.rs  cgroups_v2.rs  events.rs  lib.rs  sandbox.rs  shim.rs  topics.rs  types.rs  windows.rs
crates/shim-protos/src/cgroups/: metrics.rs
crates/shim-protos/src/events/: container.rs  content.rs  image.rs  mod.rs  mount.rs  namespace.rs  snapshot.rs  task.rs
crates/shim-protos/src/shim/: empty.rs  events.rs  events_ttrpc.rs  events_ttrpc_async.rs  fieldpath.rs  gogo.rs  mod.rs  oci.rs  shim.rs  shim_ttrpc.rs  shim_ttrpc_async.rs  task.rs
crates/shim-protos/src/types/: empty.rs  mod.rs  mount.rs  task.rs
crates/shim-protos/tests/: ttrpc.rs
crates/shim-runc/: Cargo.toml  README.md  build.rs
crates/shim-runc/src/: container.rs  main.rs  service.rs  utils.rs
crates/shim-runc/src/oom/: mod.rs  v1.rs  v2.rs
crates/shim-runc/src/options/: mod.rs  oci.rs
crates/shim-runc/src/process/: config.rs  fifo.rs  init.rs  io.rs  mod.rs  state.rs  traits.rs
crates/shim/examples/: empty-shim.rs  empty.rs  empty_shim.rs  publish.rs  skeleton.rs  skeleton_async.rs  windows_log_reader.rs
crates/shim/src/: args.rs  cgroup.rs  console.rs  container.rs  error.rs  event.rs  io.rs  lib.rs  logger.rs  monitor.rs  mount.rs  mount_linux.rs  mount_other.rs  publisher.rs  reap.rs  task.rs  util.rs
crates/shim/src/asynchronous/: console.rs  container.rs  mod.rs  monitor.rs  processes.rs  publisher.rs  task.rs  util.rs  utils.rs
crates/shim/src/synchronous/: console.rs  mod.rs  monitor.rs  publisher.rs  util.rs
crates/shim/src/sys/: mod.rs
crates/shim/src/sys/windows/: named_pipe_logger.rs
crates/shim_instrument/: Cargo.toml  README.md
crates/shim_instrument/src/: lib.rs
crates/snapshots/: Cargo.toml  README.md  build.rs  rsync.txt
crates/snapshots/examples/: snapshotter.rs
crates/snapshots/src/: convert.rs  lib.rs  wrap.rs
scripts/: install-protobuf.sh  update-protos.sh  update-vendor.sh
