[workspace]
members = [
  "crates/client",
  "crates/logging",
  "crates/runc",
  "crates/runc-shim",
  "crates/shim",
  "crates/shim-protos",
  "crates/snapshots",
  "crates/shim_instrument",
]

[profile.release]
# Keep binary as small as possible
# https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html
panic = 'abort'

# Common for all crates
# See https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
homepage = "https://containerd.io"
edition = "2021"

# Common dependencies for all crates
[workspace.dependencies]
async-trait = "0.1.52"
futures = "0.3.19"
libc = "0.2.112"
log = {version = "0.4.2", features=["kv_unstable"]}
nix = "0.28"
oci-spec = "0.6"
os_pipe = "1.1"
prctl = "1.0.0"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3.29", features = ["serde", "std", "formatting"] }
tokio = "1.26"
tonic = "0.11"
tonic-build = "0.11"
tower = "0.4"
uuid = { version = "1.0", features = ["v4"] }
