[workspace]
members = [
  "crates/client",
  "crates/logging",
  "crates/runc",
  "crates/runc-shim",
  "crates/shim",
  "crates/shim-protos",
  "crates/snapshots",
]
resolver = "2"

[profile.release]
# Keep binary as small as possible
# https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html
panic = 'abort'

# Common for all crates
# See https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
homepage = "https://containerd.io"
edition = "2021"

# Common dependencies for all crates
[workspace.dependencies]
async-trait = "0.1.89"
cgroups-rs = { version = "0.5", default-features = false }
crossbeam = { version = "0.8", default-features = false }
futures = { version = "0.3", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
nix = { version = "0.31", default-features = false }
oci-spec = { version = "0.9", default-features = false }
prost = { version = "0.14", default-features = false }
prost-build = { version = "0.14", default-features = false }
prost-types = { version = "0.14", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
simple_logger = { version = "5.2", default-features = false }
tempfile = "3.25"
thiserror = "2.0"
time = { version = "0.3", default-features = false }
tokio = { version = "1.49", default-features = false }
tonic = { version = "0.14", default-features = false }
tonic-prost = "0.14"
tonic-prost-build = { version = "0.14", default-features = false }
tower = { version = "0.5", default-features = false }
uuid = { version = "1.21", default-features = false }
