[package]
name = "containerd-client"
version = "0.8.0"
authors = [
  "Maksym Pavlenko <pavlenko.maksym@gmail.com>",
  "The containerd Authors",
]
description = "GRPC bindings to containerd APIs"
keywords = ["containerd", "client", "grpc", "containers"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[example]]
name = "container"
path = "examples/container.rs"

[[example]]
name = "version"
path = "examples/version.rs"

[dependencies]
hyper-util = { version = "0.1.20", default-features = false, features = ["tokio"] }
prost = { workspace = true, features = ["derive", "std"] }
prost-types = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["net"], optional = true }
tonic = { workspace = true, features = ["codegen", "channel"] }
tonic-prost.workspace = true
tower = { workspace = true, features = ["util"], optional = true }

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "net"] }

[features]
connect = ["tokio", "tower"]
docs = []

# Technically Tonic doesn't require Tokio and Tower dependencies here.
# However we need them to implement `connect` helper and it's highly unlikely
# that Tonic will be used with any other async runtime (see https://github.com/hyperium/tonic/issues/152)
# So we enable `connect` feature by default (use `--no-default-features` otherwise).
default = ["connect"]

[package.metadata.docs.rs]
features = ["docs"]

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
