[package]
name = "containerd-shim-logging"
version = "0.1.1"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>", "The containerd Authors"]
edition = "2018"
description = "Logger extension for containerd v2 runtime"
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
keywords = ["containerd", "shim", "containers"]
homepage = "https://containerd.io"
