[package]
name = "containerd-protos"
version = "0.1.0"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/mxpv/containerd-rust-extensions"

[dependencies]
protobuf = "2.23.0"
ttrpc = "0.5.1"

[build-dependencies]
ttrpc-codegen = "0.2"
