[package]
name = "containerd-runc-shim"
version = "0.1.1"
authors = ["Shaobao Feng <fshb1988@gmail.com>", "Tianyang Zhang <burning9699@gmail.com>", "The containerd Authors"]
keywords = ["containerd", "shim", "containers"]
description = "Rust implementation of containerd's runc v2 shim runtime"

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
# Overwrite the binary name so it can be referred as "io.containerd.runc.v2-rs" from containerd.
# Note: the runtime's binary name must start with "io.containerd.runc" in order to
# keep compatibility with Go runc runtime and the containerd client.
# Example: https://github.com/containerd/containerd/blob/8047eb2fcac1f4553ee7652862194b1e10855ce7/task_opts_unix.go#L33
name = "containerd-shim-runc-v2-rs"
path = "src/main.rs"
doc = false

[features]
async = ["containerd-shim/async", "runc/async", "tokio", "futures", "async-trait"]

[dependencies]
log = "0.4"
nix = "0.25"
libc = "0.2.95"
time = { version = "0.3.7", features = ["serde", "std"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
oci-spec = "0.5.4"
crossbeam = "0.8.1"

# Async dependencies
async-trait = { version = "0.1.51", optional = true }
tokio = { version = "1.17.0", features = ["full"], optional = true }
futures = { version = "0.3.21", optional = true }

containerd-shim = { path = "../shim", version = "0.3.0" }
runc = { path = "../runc", version = "0.2.0" }