[package]
name = "containerd-runc-shim"
version = "0.1.1"
authors = [
    "Shaobao Feng <fshb1988@gmail.com>",
    "Tianyang Zhang <burning9699@gmail.com>",
    "The containerd Authors",
]
description = "Rust implementation of containerd's runc v2 shim runtime"
keywords = ["containerd", "shim", "containers"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
# Overwrite the binary name so it can be referred as "io.containerd.runc.v2-rs" from containerd.
# Note: the runtime's binary name must start with "io.containerd.runc" in order to
# keep compatibility with Go runc runtime and the containerd client.
# Example: https://github.com/containerd/containerd/blob/8047eb2fcac1f4553ee7652862194b1e10855ce7/task_opts_unix.go#L33
name = "containerd-shim-runc-v2-rs"
path = "src/main.rs"
doc = false

[dependencies]
containerd-shim = { path = "../shim", version = "0.10.0", features = ["async"] }
libc.workspace = true
log.workspace = true
nix = { workspace = true, features = ["socket", "uio", "term", "signal"] }
oci-spec = { workspace = true, features = ["runtime"] }
prctl.workspace = true
runc = { path = "../runc", version = "0.3.0", features = ["async"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
time = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["v4"] }
# Async dependencies
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "sync", "fs", "io-util", "net", "time", "signal"] }
rustix = { version = "1.1", default-features = false, features = ["std", "termios"] }

[package.metadata.cargo-machete]
ignored = ["libc"]

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs.workspace = true
nix = { workspace = true, features = ["event"] }
tokio-eventfd = "0.2.2"
