[package]
name = "runc"
version = "0.2.0"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>", "The containerd Authors"]
description = "A crate for consuming the runc binary in your Rust applications"
keywords = ["containerd", "containers", "runc"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
async = ["tokio", "async-trait", "futures", "tokio-pipe"]
docs = []

[dependencies]
libc.workspace = true
log.workspace = true
nix = { workspace = true, features = ["user", "fs"] }
oci-spec.workspace = true
os_pipe.workspace = true
path-absolutize = "3.0.11"
rand = "0.8.4"
serde.workspace = true
serde_json.workspace = true
tempfile = "3.6.0"
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

# Async dependencies
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-pipe = { version = "0.2.10", optional = true }

[package.metadata.docs.rs]
features = ["docs"]
