[package]
name = "runc"
version = "0.3.0"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>", "The containerd Authors"]
description = "A crate for consuming the runc binary in your Rust applications"
keywords = ["containerd", "containers", "runc"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
async = ["tokio", "async-trait", "tokio-pipe"]
docs = []

[dependencies]
libc.workspace = true
log.workspace = true
nix = { workspace = true, features = ["user", "fs"] }
oci-spec = { workspace = true, features = ["runtime"] }
os_pipe.workspace = true
path-absolutize = { version = "3.1", default-features = false }
prctl.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
tempfile.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde", "std"] }
uuid = { workspace = true, features = ["v4"] }

# Async dependencies
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "sync", "fs", "io-util", "net", "time"], optional = true }
tokio-pipe = { version = "0.2.12", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ["docs"]
