[package]
name = "containerd-shim-client"
version = "0.1.0"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
description = "TTRPC bindings for containerd shim interfaces"
keywords = ["containerd", "shim", "containers", "ttrpc", "client"]
categories = ["api-bindings"]

[dependencies]
protobuf = "2.23.0"
ttrpc = "0.5.2"

[build-dependencies]
ttrpc-codegen = "0.2"
