[package]
name = "containerd-shim-protos"
version = "0.8.0"
authors = [
  "Maksym Pavlenko <pavlenko.maksym@gmail.com>",
  "The containerd Authors",
]
description = "TTRPC bindings for containerd shim interfaces"
keywords = ["containerd", "shim", "containers", "ttrpc", "client"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
async = ["ttrpc/async", "async-trait"]
sandbox = []
docs = []

[[example]]
name = "shim-proto-server"
path = "examples/ttrpc-server.rs"

[[example]]
name = "shim-proto-client"
path = "examples/ttrpc-client.rs"

[[example]]
name = "shim-proto-connect"
path = "examples/connect.rs"

[[example]]
name = "shim-proto-server-async"
path = "examples/ttrpc-server-async.rs"
required-features = ["async"]

[[example]]
name = "shim-proto-client-async"
path = "examples/ttrpc-client-async.rs"
required-features = ["async"]

[[example]]
name = "shim-proto-connect-async"
path = "examples/connect-async.rs"
required-features = ["async"]

[dependencies]
async-trait = { workspace = true, optional = true }
protobuf = "3.7.2"
ttrpc = "0.8.3"

[build-dependencies]
ttrpc-codegen = "0.6.0"

[dev-dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
simple_logger = { workspace = true, features = ["stderr"] }
tokio = { workspace = true, features = ["full"] }
crossbeam.workspace = true # Used by create_ttrpc_context()

[package.metadata.docs.rs]
features = ["docs"]
