[package]
name = "containerd-shim-runc"
version = "0.1.0"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>", "The containerd Authors"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
description = "rust extensions for containerd-shim-runc"
keywords = ["containerd", "shim", "containers", "ttrpc", "runc"]
categories = ["api-bindings"]
homepage = "https://containerd.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = { git =  "https://github.com/kata-containers/cgroups-rs" }
futures = "0.3.19"
nix = "0.23.1"
log = { version = "0.4", features = ["std"] }
once_cell = "1.9.0"
protobuf = "2.25.2"
rand = "0.8.4"
serde_json = "1.0.75"
sys-mount = "1.3.0"
time = { version = "0.3.7", features = ["std"] }
tokio = { version = "1.15.0", features = ["io-util", "rt", "rt-multi-thread"] }
ttrpc = "0.6.0"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }

containerd-shim = { path = "../shim", version = "0.2.0" }
containerd-shim-protos = { path = "../shim-protos", version = "0.1.2" }
runc = { path = "../runc", version = "0.1.0" }

[build-dependencies]
ttrpc-codegen = "0.3.0"
