[package]
name = "shim_instrument"
version = "0.1.0"
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]

[lib]
proc-macro = true