[package]
name = "containerd-snapshots"
version = "0.2.0"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>", "The containerd Authors"]
keywords = ["containerd", "server", "grpc", "containers"]
categories = ["api-bindings", "asynchronous"]
description = "Remote snapshotter extension for containerd"

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "1.0"
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
async-stream = "0.3.3"
futures.workspace = true
pin-utils = "0.1.0"

[dev-dependencies]
log = "0.4"
async-stream = "0.3.2"
futures.workspace = true
simple_logger = { version  = "4.0", default-features = false }

[build-dependencies]
tonic-build.workspace = true
