[package]
name = "containerd-snapshots"
version = "0.3.0"
authors = [
  "Maksym Pavlenko <pavlenko.maksym@gmail.com>",
  "The containerd Authors",
]
description = "Remote snapshotter extension for containerd"
keywords = ["containerd", "server", "grpc", "containers"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
docs = []

[dependencies]
async-stream = "0.3.3"
futures.workspace = true
pin-utils = "0.1.0"
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1.8"

[dev-dependencies]
async-stream = "0.3.2"
futures.workspace = true
log.workspace = true
simple_logger = { version = "4.0", default-features = false }

[build-dependencies]
tonic-build.workspace = true

[package.metadata.docs.rs]
features = ["docs"]
