[package]
name = "containerd-snapshots"
version = "0.3.0"
authors = [
  "Maksym Pavlenko <pavlenko.maksym@gmail.com>",
  "The containerd Authors",
]
description = "Remote snapshotter extension for containerd"
keywords = ["containerd", "server", "grpc", "containers"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
docs = []

[dependencies]
async-stream = "0.3.6"
futures = { workspace = true, features = ["std", "alloc"] }
prost = { workspace = true, features = ["derive", "std"] }
prost-types = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
thiserror.workspace = true
tonic = { workspace = true, features = ["codegen"] }
tonic-prost.workspace = true
tokio-stream = { version = "0.1", default-features = false }

[dev-dependencies]
futures.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "net", "io-util"] }
tonic = { workspace = true, features = ["server", "router"] }

[build-dependencies]
tonic-prost-build.workspace = true

[package.metadata.docs.rs]
features = ["docs"]

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
